--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gremlins-monkey-test",
+  "name": "gremlins-puppet",
   "version": "1.0.0",
-  "description": "Monkey testing with Gremlins.js using Puppeteer as a wrapper",
+  "description": "Monkey testing with Gremlins.js via Puppeteer",
   "main": "index.js",
   "repository": "git@github.com:karthik3583/gremlins-monkey-test.git",
   "author": "Karthik Gurram <karthik3583@gmail.com>",
@@ -9,19 +9,19 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "gremlins.js": "^0.1.0",
-    "puppeteer": "^1.5.0",
-    "yargs": "^11.0.0"
+    "puppeteer": "^0.13.0",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^4.19.1",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.14.0",
     "eslint-config-nodejs": "^2.0.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.8.0",
     "forever": "^0.15.3",
-    "prettier": "^1.13.5",
+    "prettier": "^1.9.2",
     "rimraf": "^2.6.2"
   },
   "scripts": {
